...
    <string name="media_playback_previous_member">Previous file</string>
    <string name="media_playback_next_member">Next file</string>
    <string name="media_playback_previous_take">Previous take</string>
    <string name="media_playback_next_take">Next take</string>
    <string name="media_playback_loading">Reading media…</string>
    <string name="media_playback_page_error">Could not read the next page. Try Next take again.</string>
    <string name="media_playback_paused">Paused</string>
    <string name="media_playback_playing">Playing · player time is approximate</string>
    <string name="media_playback_ended">End of media</string>
    <string name="media_playback_error">Media read failed; no approximate frame substituted.</string>
    <string name="media_playback_closed">Reader closed</string>
    <string name="media_playback_exact">Frame %1$d of %2$d is shown exactly as stored in the file, at %3$s s.</string>
    <string name="media_playback_estimated">Player position: %1$d ms</string>
    <string name="media_playback_pause">Pause</string>
    <string name="media_playback_play">Play</string>
    <string name="media_playback_start">Go to start</string>
    <string name="media_playback_end">Go to end</string>
    <string name="media_playback_previous_frame">Previous frame</string>
    <string name="media_playback_next_frame">Next frame</string>
...
